@@ -27,6 +27,8 @@ In development:
 
 * Cleanup compile warnings, patch #3579199 on SF.
 
+* Renamed Check's internal list functions to start with check_, patch #3448601 on SF.
+
 Mon, Oct 22, 2012: Released Check 0.9.9
   based on r637 (2012-10-22 13:54:14 +0200)
 
